added more questions

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <h2 id="question"> </h2>
-    <h1 id="answer"> </h1>
+    <h2 id="question"></h2>
+    <h1 id="answer"></h1>
+    <h3 id="wrong"></h3>>
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 
