--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <h2 id="question"></h2>
     <h1 id="answer"></h1>
-    <h3 id="wrong"></h3>>
+    <h3 id="wrong"></h3>
+    <h3 id="correct"></h3>
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 
