made the layout totally sick

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 </head>
 
 <body>
-    <h2 id="question"></h2>
-    <h1 id="answer"></h1>
-    <h3 id="wrong"></h3>
-    <h3 id="correct"></h3>
+    <header>
+        <div>
+            <h1>Shakespeare Word Guess</h1>
+        </div>
+    </header>
+    <section>
+        <div>
+            <h2 id="question"></h2>
+            <h1 id="answer"></h1>
+            <h3 id="wrong"></h3>
+        </div>
+    </section>
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 
