--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2 id="question"></h2>
             <h1 id="answer"></h1>
             <h3 id="wrong"></h3>
+            <input id="#textinput">
         </div>
     </section>
     <script type="text/javascript" src="scripts.js"></script>
