--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
     <section>
         <div>
+            <h2 id="clock"></h2>
             <h2 id="question"></h2>
             <h1 id="answer"></h1>
             <h3 id="wrong"></h3>
